--- a/style.css
+++ b/style.css
@@ -249,3 +249,8 @@ span{
 #password ~ #password-label>span:nth-child(8){
     transition-delay: 0.35s;
 }
+
+input:-internal-autofill-selected {
+    background-image: none !important;
+    background-color: transparent !important;
+}
